# ML-Umbrella

./: LICENSE  README.md
Agents/GPT-4V-Scraper/: .gitignore  Readme.md  package-lock.json  package.json  screenshot.js  screenshot1.js  vision_scraper.py
Big Data/real_time_kafka/: .env  .env.template  Makefile  Readme.md  pyproject.toml  ui.py
Big Data/real_time_news_engine_kafka/: .gitignore  Makefile
RAG/RAG_Production_Bytewax_pipeline/: .env.template  RAG.ipynb  README.md  Retrieve.ipynb  ingest.py  output.py  pyproject.toml
RAG/RAG_Production_Bytewax_pipeline/data/: paul.json
RAG/RAG_Production_Bytewax_pipeline/data/JSON/: Book_TextHeavy.json  Journal_1ColumnMDPI.json  Journal_1Column_ACM.json  Journal_1Column_Elsevier.json  Journal_1Column_Highlights.json  Journal_2Cloumn_IEEE.json  Journal_2Column_ACM.json  Journal_2Column_Elsevier1_AbstractWithHeadings.json  Journal_2Column_Elsevier2.json  Journal_2Column_Elsevier3_NoKeywords.json  Journal_2Column_Elsevier4_Keywords.json  Journal_2Column_HeaderHighlights_CaptionsinFooter.json  Journal_2Column_Springer1.json  Journal_2Column_Springer2_Abstractwithheadings.json  Journal_2Column_Springer3.json  Journal_2Column_Springer4.json  Journal_3Column_Elsevier.json  Letter_2Column.json  Letter_2Column2.json  Magazine_3Column.json  Paper_2Column_ACM.json  Paper_2Column_IEEE1.json  Paper_2Column_IEEE2.json  Protocol_1Column_Highlights.json
RAG/RAG_Production_Bytewax_pipeline/rag/: embeddings.py  flow.py  json_source.py  models.py  pinecone_vs.py  retrieve.py  settings.py  test.py  test_parts.py  vectorstores.py
(+94 files in other folders)
